--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.3.10",
     "@react-navigation/native": "^7.0.14",
     "expo": "~53.0.0",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
+    "expo-file-system": "~18.1.8",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.6",
+    "expo-image-manipulator": "~13.1.5",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
@@ -37,14 +42,11 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.3",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.8",
-    "expo-image-manipulator": "~13.1.5"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
